# json-log-histogram-rust

./: Cargo.toml  README.md
inputs/: 1000MB.json  100MB.json  10MB.json  1MB.json
src/: main.rs
