[package]
name = "jlh"
version = "0.1.0"
authors = ["Dimitar Panayotov <mitko.p@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
prettytable-rs = "0.8"
rayon = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"